add scheduled_for column to db

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node ./src/app.ts",
+    "dev": "tsnd --respawn ./src/app.ts",
     "test": "jest --testPathPattern=test/",
     "prisma-setup": "prisma migrate dev && prisma generate"
   },
